# ecasbot

./: .appveyor.yml  .bandit.yml  .gitignore  .travis.yml  Dockerfile  Doxyfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.py  tox.ini
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: codeql.yml  python.yaml
.reuse/: dep5
config/: ecasbot-env.conf  ecasbot.conf  ecasbot.json  ecasbot.logrotate  ecasbot.service  ecasbot.spec
docs/: README.md  available-bot-actions.md  bot-environment-options.md  building-fedora-package.md  building_fedora_package.md  controling-with-systemd.md  fedora-installation.md  getting-started.md  pypi-installation.md  schema-changes.md  schema-documentation.md  virtualenv-installation.md  windows-installation.md
ecasbot/: __init__.py  chkmsg.py  chkusr.py  ranges.py  settings.py  validators.py
ecasbot/modules/: __init__.py  helpers.py  ranges.py
ecasbot/modules/messages/: __init__.py  factory.py
ecasbot/scripts/: __init__.py  runbot.py
packaging/assets/: ecasbot.json  ecasbot.sysusers  manpage.md
packaging/fedora/: ecasbot.spec  ecasbot.sysusers
packaging/windows/: build.cmd
packaging/windows/assets/: ecasbot.manifest  version.txt
packaging/windows/inno/: ecasbot.iss
src/: ecas.py  ecasbot.py  ecasdb.py
src/ecasbot/: __init__.py  chkmsg.py  chkusr.py  exceptions.py  extractor.py  permissions.py  ranges.py  reader.py  settings.py
src/ecasbot/messages/: factory.py  (+1 more)
(+17 files in other folders)
